# OpenBYOND

./: .gitignore  CMakeLists.txt  README.md  TODO.md  configure.sh  makepng.sh
cmake/: FindAllegro.cmake  FindTCLAP.cmake
dm/: test.dm
lib/allegro-5.0/: placeholder.txt
openbyond-core/: CMakeLists.txt  config.h.in
openbyond-core/dm/: atom_defaults.dm  dm_std.dm
openbyond-core/grammar/: Makefile  README.md  buildtest.sh  parser.y  test.dm  tokens.l
openbyond-core/include/: Atom.h  ObjectTree.h  Proc.h  Value.h  string_utils.h  vector_utils.h
openbyond-core/include/scripting/: DMLexer.h  Driver.h  Nodes.h  ObjectTree.h  Preprocessor.h
openbyond-core/src/: Atom.cpp  ObjectTree.cpp  Proc.cpp  Value.cpp  string_utils.cpp  vector_utils.cpp
openbyond-core/src/scripting/: Driver.cpp  Nodes.cpp  ObjectTree.cpp  Preprocessor.cpp
openbyond-tools/: CMakeLists.txt
openbyond-tools/src/: dm.cpp
ref/: DMB File Format (YotaXP).txt  DMB Opcodes (tobba).txt  byond32 (Tobba).rs
ref/Tobba/: Packet.js  Socket.js  byond32.rs
